# TAAT

./: .gitignore  404.html  LICENSE  README.md  audio.py  clustering.py  cross_similarity.py  features.py  fingerprint_extractor.py  fingerprinter2.py  hog_descriptor.py  image_match_test.py  index.html  kmeans.py  main.py  mass.py  matcher.py  mkdocs.yml  notebook_widgets.py  objects.inv  olaf_api.py  olaf_plot.py  peak_extraction.py  pyproject.toml  requirements.txt  segmentation.py  source_separation.py  ssm.py  taat.py  wavelet.py  waveprint.py  xsim_fingerprint_extractor.py
docs/: index.md  overview.md  reference.md  user-guide.md
overview/: index.html
reference/: index.html
scripts/: mp3_to_wav.py
src/: LSH.py  cross_similarity.py  db.py  dtw.py  features.py  fingerprint_extractor.py  fp_extractor_from_hog_descriptors.py  hog_descriptor.py  hog_descriptor_clusters_widgets.py  main.py  notebook_widgets.py  olaf_plot.py  peak_extraction.py  segmentation.py  source_separation.py  taat.py  utils.py  waveprint_test.py
src/clustering/: clustering.py  kmeans.py
src/olaf/: __init__.py  olaf.py
tutorials/: index.html
user-guide/: index.html
